Fix footer spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,3 +33,7 @@ p.card-notes {
 a {
   text-decoration: none;
 }
+
+.blockquote-footer {
+  margin-top: 0em;
+}
